crates/swc_ecma_parser/tests/flow/types/object/unexpected_static_005.js
// error: static method named static
type H = { static static(): R }
